# spog-bfv

./: CMakeLists.txt  README.md  SPOGBFVConfig.h.in  SPOGConfig.h.in
cmake/: FindGMP.cmake  FindNTL.cmake  FindcuPoly.cmake  Findnlohmannjson.cmake  Findspog.cmake  Findspogbfv.cmake  doxygen.cmake
demos/: CMakeLists.txt
demos/src/: CMakeLists.txt  add_mul.cpp  encrypt_decrypt.cpp  sequential_mul.cpp  simple_add.cpp  simple_add1.cpp  simple_add2.cpp  simple_mul.cpp  simple_mul_with_keys.cpp  toy_mul.cpp
doc/: spog.doxygen.in
include/SPOG/: SPOGConfig.h  fv.h  fvcontext.h
include/SPOG-BFV/: SPOGBFVConfig.h  bfv.h  bfvcontext.h
include/SPOG-BFV/arithmetic/: ciphertext.h
include/SPOG-BFV/tool/: version.h
include/SPOG/arithmetic/: ciphertext.h
include/SPOG/tool/: version.h
python/env/: setup.py  test.py
python/env/src/: spog.cpp  spog.hh  spog.i
src/: bfv.cpp  bfvcontext.cpp  fv.cpp  fvcontext.cpp
src/arithmetic/: ciphertext.cpp
src/demo/: tracker.cpp
src/tests/: test.py
src/tool/: version.cpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test.cpp
