FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(cuPoly REQUIRED)
FIND_PACKAGE(spogbfv REQUIRED)

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

#
# TEST
#
ENABLE_TESTING()

ADD_EXECUTABLE(
    spogbfv_test
    ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
)

SET_PROPERTY(TARGET spogbfv_test PROPERTY CUDA_STANDARD 11)

TARGET_LINK_LIBRARIES(
    spogbfv_test
    ${GTEST_BOTH_LIBRARIES}
    -lcupolybfv
    -lntl 
    -lgmp 
    -fopenmp
    ${CUDA_curand_LIBRARY}
    spogbfv
)
